Fix spacing issue under jumbotron

--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,11 @@ footer {
   	color: #4d4d4d;
   	font-size: 20px;
 }
+
+#body-content {
+	position: relative;
+  	top: -5em;
+}
 #branding {
 	padding-left: 5%;
 }
@@ -95,7 +100,10 @@ footer {
 #sample-box {
 	margin: 0 auto;
 }
-
+#specialbutton {
+	margin-left:auto;
+	margin-right: auto;
+}
 
 
 
