--- a/css/max-450px.css
+++ b/css/max-450px.css
@@ -5,3 +5,6 @@
 #logo {
 	height:50%;
 }
+#body-content{
+  	top: 0em;
+}
